# Catch2

design/class/: global.puml  registry.puml  reporter_registry.puml  test_registry.puml
design/sequence/: 0-boot.puml  1-session-run.puml
playground/: CMakeLists.txt  main.cpp
src/catch2/internal/: catch_test_case_registry_impl.hpp
src/catch2/reporters/: catch_reporter_registrars.hpp
